2012-09-20  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.82

	* src/pam-config.c: Use pam_unix.so and pam_cracklib.so for
	initial config instead of pam_unix2.so and pam_pwcheck.so.

2012-08-06  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.81

	* src/mod_pam_ssh.c (write_config_ssh): Remove try_first_pass
	as extra option and write it always in auth section [bnc#773560].

	* src/supported-modules.h: Move pam_ecryptfs after pam_unix2.
	Does not work with krb5, but else it does not work at all [bnc#740110].

2012-04-03  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.80

	* src/Makefile.am: Add mod_pam_ecryptfs.c
	* src/mod_pam_cryptfs: New.
	* src/supported-modules.h: Add pam_ecryptfs.c
	Patch from Darin Perusich <darin@darins.net>, bnc#752851.

2011-08-18  Thorsten Kukuk  <kukuk@suse.de>

	* src/Makefile.am: Add mod_pam_systemd.c
	* src/mod_pam_systemd.c: New.
	* src/supported-modules.h: Add pam_systemd.
	Patch from Frederic Crozat <fcrozat@novell.com>, bnc#700053.

2011-05-10  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.79

	* src/pam-config.8.xml-footer: Document that if symlinks don't
	point to *-pc files config for global modules is ignored
	[FATE#310739].

2011-05-09  Thorsten Kukuk  <kukuk@suse.de>

	* src/mod_pam_lastlog.c (write_config_lastlog): Use optional
	instead of required [bnc#686034].

2010-10-13  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.78

	* src/supported-modules.h: Move pam_env to the end of
	session stack.

	* src/Makefile.am: Add pam_fprintd.
	* src/mod_pam_fp.c: Likewise.
	* src/mod_pam_fprint.c: Likewise.
	* src/mod_pam_thinkfinger.c: Likewise.
	* src/supported-modules.h: Likewise.
	* src/mod_pam_fprintd.c: New.
	Based on patches from Frederic Crozat [bnc#644168].

2010-08-31  Thorsten Kukuk  <kukuk@suse.de>

	* release version 0.77

	* src/sanity_checks.c (check_for_pam_module): Fix
	check for existence of PAM module on lib64 archs [bnc#635098].
