@@ -100,8 +100,8 @@ static pam_module_t *module_list_auth[] = {
   &mod_pam_fprint,
   &mod_pam_fprintd,
   &mod_pam_thinkfinger,
-  &mod_pam_gnome_keyring,
-  &mod_pam_ssh,     /* optional modules MUST executed before sufficient modules which also need a password. */
+  &mod_pam_gnome_keyring, /* optional modules MUST be executed before sufficient modules which also need a password. */
+  &mod_pam_ssh,
   &mod_pam_unix2,
   &mod_pam_unix,
   &mod_pam_ecryptfs,
