@@ -5,6 +5,10 @@
 	* src/pam-config.c: Use pam_unix.so and pam_cracklib.so for
 	initial config instead of pam_unix2.so and pam_pwcheck.so.
 
+	* src/supported-modules: make pam_ssh a sufficient 
+	auth module [bnc#730851].
+	* src/mod_pam_ssh.c: Likewise.
+
 2012-08-06  Thorsten Kukuk  <kukuk@suse.de>
 
 	* release version 0.81
